test/pass/mutrec.sest
module Mutrec = struct

  val main(_) =
    let
      rec odd(n) =
        let _ = print_debug(n) in
        even(n - 1)

      and even(n) =
        let _ = print_debug(n) in
        if n <= 0 then
          {}
        else
          odd(n - 1)
    in
    even(10)

end
